# ur-c

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md
cmake/: dependencies.cmake  urc-config.cmake.in
include/bcr/: bcr.h  crypto_eckey.h  crypto_hdkey.h  crypto_psbt.h  crypto_seed.h  error.h
include/ur-c/: crypto_account.h  crypto_eckey.h  crypto_hdkey.h  crypto_output.h  crypto_psbt.h  crypto_seed.h  error.h  tags.h  urc.h
include/urc/: core.h  crypto_account.h  crypto_eckey.h  crypto_hdkey.h  crypto_output.h  crypto_psbt.h  crypto_seed.h  error.h  jade_bip8539.h  jade_rpc.h  tags.h  urc.h
src/: CMakeLists.txt  account.c  bcr.c  bip8539.c  core.c  eckey.c  hdkey.c  internals.h  jade_rpc.c  jadeaccount.c  macros.h  output.c  p2pkh.c  parser.c  parser.h  psbt.c  seed.c  utils.c  utils.h
tests/: CMakeLists.txt  account.c  eckey.c  formatter.c  hdkey.c  helpers.c  helpers.h  jade_rpc.c  output.c  parser.c  psbt.c  runner.c
tests/fuzzy/: parser.c
